exports[`no-unused-properties > invalid(1): function foo() {\n\tconst bar = {\n\t\tb: 2,\n\t\tu: 3\n\t};\n\tconsole.log(bar.b);\n} 1`] = `

  1 | function foo() {
  2 | 	const bar = {
  3 | 		b: 2,
  4 | 		u: 3
  5 | 	};
  6 | 	console.log(bar.b);
  7 | }

`;

exports[`no-unused-properties > invalid(1): function foo() {\n\tconst bar = {\n\t\tb: 2,\n\t\tu: 3\n\t};\n\tconsole.log(bar.b);\n} 2`] = `

Message:
  1 | function foo() {
  2 | 	const bar = {
  3 | 		b: 2,
> 4 | 		u: 3
    | 		^^^^ Property \`u\` is defined but never used.
  5 | 	};
  6 | 	console.log(bar.b);
  7 | }

`;
